Update devel/pycharm-bin to 2022.1.4
Newer versions are built with a java version newer than what we ship,
leading to binary incompatibility.

This version breaks with java 17, see
<https://intellij-support.jetbrains.com/hc/en-us/community/posts/5961640280210-Can-t-start-IntelliJ-Idea-Error-LinkageError-occurred-while-loading-main-class-com-intellij-idea-Main>,
and unfortunately the pkgsrc USE_JAVA2 is "version N or newer", which
does not help here.

Changes are too numerous to list, see
<https://youtrack.jetbrains.com/articles/PY-A-233537986/PyCharm-2022.1.4-221.6008.17-build-Release-Notes> etc.
("Neue Schraube! Ganz neue Schraube!")